vlib/v/checker/tests/par_expr_decl_assign_err.out
vlib/v/checker/tests/par_expr_decl_assign_err.vv:2:2: error: non-name on the left side of `:=`
    1 | fn main() {
    2 |     (x) := 5
      |     ~~~
    3 | }
