vlib/v/checker/tests/par_expr_decl_assign_err.vv
fn main() {
	(x) := 5
}
